<resources>
    <string name="app_name">assistant</string>

    <string name="tvChoose_str">choose assistant type</string>
    <string name="btnPreBuilt_str">pre-built</string>
    <string name="btnCustom_str">custom</string>

    <string name="tvChooseFeaturesCustom_str">choose features</string>
    <string name="checkDice_str">Dice</string>
    <string name="checkScore_str">Score Table</string>
    <string name="checkTimer_str">Timer</string>
    <string name="btnContinueFeaturesCustom_str">continue</string>

    <string name="tvDiceSettings_str">dice settings</string>
    <string name="tvDiceType_str">sides</string>
    <string name="tvDiceNumber_str">number</string>
    <string name="btnContinueDiceSettings_str">continue</string>

    <string name="tvTableSettings_str">table settings</string>
    <string name="tvColumns_str">columns</string>
    <string name="tvRows_str">rows</string>
    <string name="rbtnColumnsPlayer_str">use player names as columns</string>
    <string name="rbtnColumnsNumber_str">enter number of columns</string>
    <string name="cbColumnsLabel_str">label columns</string>
    <string name="tvRowsNumber_str">enter number of rows</string>
    <string name="cbRowsLabel_str">label rows</string>
    <string name="btnContinueTableSettings_str">continue</string>

    <string name="tvTimerSettings_str">timer settings</string>
    <string name="tvTimerDuration_str">table settings</string>
    <string name="rbtnTimerOne_str">one timer</string>
    <string name="rbtnTimerEach_str">timer for each player</string>
    <string name="title_activity_dice_game">DiceGame</string>
    <string name="title_activity_table_in_game">TableInGame</string>
    <string name="title_activity_timer_in_game">TimerInGame</string>
    <string name="btTable_str">Table</string>
    <string name="btDice_str">Dice</string>
    <string name="btTimer_str">Timer</string>
    <string name="title_activity_in_game">InGameActivity</string>
    <string name="btNextPlayer_str" >Next Player </string>
    <string name="btRollDice_str">Roll Dice</string>
    <string name="btStartTimer_str">Start Timer</string>
    <string name="btStopTimer_str">Stop Timer</string>
    <string name="btResetTimer_str">Reset Timer</string>
    <string name="btnContinueTimerSettings_str">continue</string>

    <string name="tvPlayerNumber_str">number of players</string>
    <string name="btnContinuePlayerNumber_str">continue</string>

    <string name="tvPlayerNames_str">plaers nicknames</string>
    <string name="btnStartGame_str">start game</string>
    <string name="tvMinutes_str">Minutes</string>
    <string name="tvHours_str">Hours</string>
    <string name="tvSeconds_str">Seconds</string>
    <string name="AddRow">Add Row</string>
    <string name="saveToTable">Save to Table</string>
    <string name="new_game">newGame</string>

</resources>
