<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvTimerSettings_str"
        android:textAlignment="textStart"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_marginLeft="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="124dp">

        <RadioButton
            android:id="@+id/rbtnTimerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTimerOne_str" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTimerEach_str" />

    </RadioGroup>

    <Button
        android:id="@+id/btnContinueTimerSettings"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:textColor="?android:attr/textColorTertiary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="47dp"
        android:text="@string/btnContinueTimerSettings_str"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>