<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <include layout="@layout/ingame_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            />



    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.71">


        <TextView
            android:id="@+id/tvTimerOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tvTimer"
            android:layout_marginBottom="65dp"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/RelativeLayout3">

        <Button
            android:id="@+id/btStartTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btStartTimer_str"
            android:layout_marginStart="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:onClick="startTimer"/>


    <Button
        android:id="@+id/btResetTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btResetTimer_str"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:onClick="resetTimer"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/btTable"
            android:text="@string/btDice_str"
            android:onClick="changeToDice"/>

        <Button
            android:id="@+id/btTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:text="@string/btTable_str"
            android:onClick="changeToTable"/>

        <Button
            android:id="@+id/btNextPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btTimer"
            android:layout_marginEnd="27dp"
            android:text="@string/btNextPlayer_str"
            android:onClick="nextPlayer"/>
    </RelativeLayout>

</LinearLayout>